objects/ASI_CRM_CN_Coverage_Rate__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area</label>
        <referenceTo>ASI_CRM_CN_Area__c</referenceTo>
        <relationshipLabel>Coverage Rates</relationshipLabel>
        <relationshipName>Coverage_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Division_Code__c</fullName>
        <label>Division Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Coverage_Rate__c</fullName>
        <label>Coverage Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_GL_Date__c</fullName>
        <label>GL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regions</label>
        <referenceTo>ASI_CRM_Region__c</referenceTo>
        <relationshipName>Coverage_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipName>Coverage_Rates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Coverage_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Coverage Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Coverage_Rate__c</columns>
        <columns>ASI_CRM_CN_Division_Code__c</columns>
        <columns>ASI_CRM_Area__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <columns>ASI_CRM_GL_Date__c</columns>
        <columns>Owner__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Sub_Brand__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_li</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Coverage_Rate__c</columns>
        <columns>ASI_CRM_CN_Division_Code__c</columns>
        <columns>ASI_CRM_Area__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <columns>ASI_CRM_GL_Date__c</columns>
        <columns>Owner__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Sub_Brand__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_Coverage_Rate__c.ASI_CRM_CN_Coverage_Rate</value>
        </filters>
        <filters>
            <field>ASI_CRM_Area__c</field>
            <operation>equals</operation>
            <value>上海</value>
        </filters>
        <filters>
            <field>ASI_CRM_GL_Date__c</field>
            <operation>equals</operation>
            <value>8/1/2018</value>
        </filters>
        <label>All-  sunev</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CRN-{0000000}</displayFormat>
        <label>Coverage Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coverage Rates</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Coverage_Rate</fullName>
        <active>true</active>
        <label>ASI CRM CN Coverage Rate</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>